# DataCleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
Environment/: environment.yml  requirements.txt
dctoolkit/: __init__.py  cleaner.py
src/dctoolkit/: __init__.py  cleaner.py
tests/: conftest.py  test.cleaner.py  test_DataCleanerClass.py  test_InAndOut.py  test_Normalize.py  test_RemoveDuplicates.py  test_RemoveOutliers.py  test_cleaner.py  test_fillMissing.py
