[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dctoolkit*"]

[project]
name = "dctoolkit-datacleaner"
version = "0.1.0"
description = "Small toolkit for cleaning pandas DataFrames"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
license-files = ["LICENSE"]

authors = [
  { name = "Leon Otto Gasteiger", email = "leon.gasteiger@web.de" }
]

maintainers = [
  { name = "Leon Gasteiger", email = "leon.gasteiger@web.de" }
]

keywords = ["data-cleaning", "preprocessing", "dataframe"]

dependencies = [
  "pandas>=2.3.3",
  "numpy>=2.3.3"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/LeonBat/DataCleaner"
Repository = "https://github.com/LeonBat/DataCleaner"
Issues = "https://github.com/LeonBat/DataCleaner/issues"